--- a/T26_ej1_SPRINGREST/src/main/resources/application.properties
+++ b/T26_ej1_SPRINGREST/src/main/resources/application.properties
@@ -14,8 +14,7 @@ spring.datasource.password=
 #Configuraciones JPA
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #Puerto del servidor Tomcat
 server.port=8080
