--- a/T26_ej1_SPRINGREST/src/main/resources/application.properties
+++ b/T26_ej1_SPRINGREST/src/main/resources/application.properties
@@ -3,7 +3,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Url donde esta el servicio de tu mysql y el nombre de la base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/ventas
+spring.datasource.url=jdbc:mysql://localhost:3306/proveedores
+
 
 #Usuario y contrasena para tu base de datos descrita en la linea anterior
 spring.datasource.username=root
@@ -14,8 +15,8 @@ spring.datasource.password=
 #Configuraciones JPA
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
 
 #Puerto del servidor Tomcat
-server.port=8080
-
+server.port=8181
